<resources>
    <string name="app_name">Quiz</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">Invalid password</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="main_icon">icon</string>
    <string name="register">Register</string>
    <string name="title_activity_register_account">RegisterAccount</string>
    <string name="action_number">Phone Number</string>
    <string name="hint_number">Enter Phone Number</string>
    <string name="profile_reg">User Profile</string>
    <string name="choose_cat">Choose Category</string>
    <string name="username_hint">User Name</string>
    <string name="phno">Phone No</string>
    <string name="user_profile">User Profile</string>
    <string name="register_txt">Register</string>
    <string name="error_weak_password">weak password</string>
    <string name="error_user_exists">InvalidUser</string>

    <string-array name="catogery_spinner_values">
        <item>Student</item>
        <item>Mentor</item>
    </string-array>
    <string name="title_activity_user_dashbord">UserDashbord</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

</resources>
